# nested-duck-arrays

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ci/requirements/: docs.yaml  environment.yaml
docs/: conf.py  requirements.txt
nested_duck_arrays/: __init__.py  api.py  common.py  dask.py  pint.py
